# interpax

./: pyproject.toml  test_rbf_neighbors.py
interpax/: __init__.py  _rbf.py  _rbf_jax.py  _rbf_scipy.py  _rbfinterp_pythran.py  utils.py
tests/: test_rbf_jax.py  test_scipy.py
